--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -795,6 +795,19 @@ main {
   margin-bottom: 7px;
 }
 
+.timeline-item-title a:link, a:visited{
+  color: var(--orange-yellow-crayola);
+  text-decoration: none;
+  display: inline-block;
+}
+
+.timeline-item-title a:hover, a:active{
+  color: var(--white-2);
+  text-decoration: none;
+  display: inline-block;
+}
+
+
 .timeline-list span {
   color: var(--vegas-gold);
   font-weight: var(--fw-400);
