--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -332,7 +332,7 @@ main {
 }
 
 .avatar-box {
-  background: var(--bg-gradient-onyx);
+  background: var(--orange-yellow-crayola);
   border-radius: 20px;
 }
 
